--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "jquery": "^3.6.4",
-    "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22"
+    "mongoose": "^7.0.3"
+    
   },
-  "devDependencies": {},
+  "devDependencies": {"nodemon": "^2.0.22"},
   "description": ""
 }
